fix(components/collapse): 修复collapse的错误
对collapse测试过程中，发现changes事件返回的值是引用类型的，并对其进行了修复

--- a/packages/theme-chalk/src/collapse-item.css
+++ b/packages/theme-chalk/src/collapse-item.css
@@ -43,7 +43,7 @@
   will-change: height;
 }
 
-.skide-enter-active,
-.skide-leave-active {
+.slide-enter-active,
+.slide-leave-active {
   transition: height var(--mc-transition-duration) ease-in-out;
 }
